# geometry

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp
modules.cmake/: googletest.cmake  myconfig.cmake  project.cmake
src/: CMakeLists.txt  geometry.hpp  geometry_database.hpp  geometry_tools.cpp  geometry_tools.hpp  point3d.hpp
src/child/: child.cpp  child.hpp
src/parent/: parent.cpp  parent.hpp
test/: CMakeLists.txt
test/geometry_tools/: CMakeLists.txt  gtest.cpp
test/test01/: CMakeLists.txt  gtest.cpp
